# cookiecutter-my-pyproject

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{ cookiecutter.project_name }}/: Dockerfile  LICENSE.txt  Makefile  pyproject.toml
{{ cookiecutter.project_slug }}/: Makefile
